--- a/index.html
+++ b/index.html
@@ -5,5 +5,16 @@
     </head>
     <body>
         <h1>Hello World</h1>
+        <h2>CJ Beck</h2>
+        <h3>Pug Video</h3>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/KvVQAWQ7R5g" frameborder="0" allowfullscreen></iframe>
+        <h4>Cabooooooo</h4>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58807.3844177387!2d-109.96801788377792!3d22.896341784270447!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x86af4af389e508a1%3A0x4ba4df62c1a2b868!2sCabo+San+Lucas%2C+Baja+California+Sur%2C+Mexico!5e0!3m2!1sen!2sus!4v1484261765148" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/DweroSgX7fM" frameborder="0" allowfullscreen></iframe>
+        
     </body>
-</html>
+</html>  
+   
+
+     
+
