--- a/cjgclass-cooldoc/mathhigh copy 2.htm
+++ b/cjgclass-cooldoc/mathhigh copy 2.htm
@@ -3,8 +3,8 @@
 
 	<head>
 		<!--Math High: Leonard Fuller
-		Author: Nick Funahashi
-		Date: June 27, 2016
+		Author: CJ Beck
+		Date: March 9, 2017
 		-->
 		<meta charset="UTF-8" />	
 		<title>Math High Web Page</title>
